# caravela

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  output.csv  pyproject.toml
benchmarks/: main.py
src/: anchors.rs  distances.rs  encode.rs  hasher.rs  hashers.rs  index.rs  indexes.rs  indexing.rs  insert.rs  lib.rs  linalg.rs  main.rs  mask_hasher.rs  old_lib.rs  query.rs  sphere_codes.rs  test_binary_from_perm.rs  test_decompose.rs  test_distance_function.rs  test_flip_bit.rs  test_heap.rs  test_last_bit_flip.rs  test_nohash.rs  test_query.rs  test_query_struct.rs  test_swap.rs  tree.rs  try_hasher.rs  utils.rs
src/indexes/: Index16.rs  Index32.rs  Index64.rs  Index8.rs
src/tests/: hasher_test.rs
tests/: debug.py  test_binary_from_perm.rs  test_nohash.rs
