[package]
name = "caravela"
version = "0.1.0"
edition = "2021"
authors=["Antonio Leitao"]
description = "Fastest Nearest Neighbour in the 7 seas"
homepage="https://github.com/antonio-leitao/caravela"
repository="https://github.com/antonio-leitao/caravela"
readme="README.md"
license="Apache 2.0"
keywords = ["machine learning","nearest neighbors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
rand="*"
hashbrown = "0.13"