[package]
name = "caravela"
version = "0.1.0"
edition = "2021"
authors=["Antonio Leitao"]
description = "Fastest Nearest Neighbour in the 7 seas"
homepage="https://github.com/antonio-leitao/caravela"
repository="https://github.com/antonio-leitao/caravela"
readme="README.md"
license="Apache 2.0"
keywords = ["machine learning","nearest neighbors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caravela"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["abi3-py37"]

[dependencies]
nohash-hasher = "0.2.0"
rand = "0.8.5"
itertools = "0.11.0"
